--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <html>
 <body>
-<h1>This is a header</h1>
-<p>Hello, how <i>are</i> you?</p>
-<a href="test.html">Go to test.</a>
-<br />
+
+<p>Hello,dfs how <i>are</i> you?</p> <br/>
+ <br/>
+<a href="index2.html">Go to index2.</a> <img src="test-small.jpg" alt="is it not displaying?" />
+
 <br />
 HAHA!
+
+
+
+
 </body>
 </html>
