--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,9 @@
 
 <p>Hello, how <i>are</i> you?</p> <br/>
 <img src="test.png" alt="is it not displaying?" /> <br/>
-<a href="test.html">Go to test.</a> <img src="test-small.jpg" alt="is it not displaying?" />
+<a href="test.html">Go to test.</a> <img src="test-small.jpg" alt="is it not displaying?" /> <br/>
+<a href="docs/test.txt">Try this plaintext.</a>
+
 <br />
 <img src="test-gif.gif" alt="is it not displaying?" />
 <br />
